class Captor:

    def retrieveMeasure(self) -> dict():
        """
        This function retrieves the current measure from the sensor and returns it as a dictionary
        """
        raise NotImplementedError
